--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,10 @@ verify_ssl = true
 black = "*"
 
 [packages]
-django = "*"
 pylint = "*"
 pylint-django = "*"
-yapf = "*"
 django-braces = "*"
+django = "==2.2.5"
 
 [requires]
 python_version = "3.7"
